--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>Dripping Paint</title>
-        <meta name="description" content="Watch as paint drips down your screen - a simple html5 canvas experiment">		
+        <meta name="description" content="Watch as paint drips down your screen - a simple html5 canvas experiment">
+        <link href='/css/style.css' media='screen' rel='stylesheet' type='text/css'/>
     </head>
     <body>
         <canvas id='c'></canvas>
